# speech_asr

./: app_try.py  pyproject.toml  vosk_try.py  whispercpp_try.py
